# Latym-language

./: .gitignore  LICENSE  README.md  pyproject.toml  script.txt  script_2.txt  script_3.txt
latym/: __init__.py  __main__.py  grammar.lark  parser.py  runtime.py  symbol.py  test_basic.py
